# aleo-name-service-api

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  api_test.http  docker-compose.yml  init.sql  kustomization.yaml
.github/workflows/: ci-cd.yml  docker-publish.yml  update-kustomize.yml
releases/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
src/: auth.rs  client.rs  db.rs  indexer.rs  job.rs  main.rs  models.rs  utils.rs
