[package]
name = "ans-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
deadpool-redis = "0.13.0"
actix-cors = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
snarkvm-console-program = "0.16.15"
snarkvm-console-network = "0.16.15"
snarkvm-ledger-block = "0.16.15"
snarkos-node-cdn = "2.2.7"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
regex = "1.5.4"
urlencoding = "2.1.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.10"
deadpool-postgres = "0.11.0"
prometheus = "0.13.3"
actix-web-prom = "0.7.0"
futures-util = "0.3.28"
base64 = "0.13"
time = { version = "0.3.23", features = [] }
url = "2.4.0"
once_cell = "1.18.0"
futures = "0.3.28"
