[package]
name = "ans-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.6.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
snarkvm-console-program = { git = "https://github.com/ghostant-1017/snarkVM", branch = "fix/mainnet" }
snarkvm-console-network = { git = "https://github.com/ghostant-1017/snarkVM", branch = "fix/mainnet" }
snarkvm-ledger-block = { git = "https://github.com/ghostant-1017/snarkVM", branch = "fix/mainnet" }
snarkos-node-cdn = { git = "https://github.com/AleoNet/snarkOS", tag = "mainnet-v1.0.0" }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.5.0"
regex = "1.10.6"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.11"
deadpool-postgres = "0.11.0"
prometheus = "0.13.3"
actix-web-prom = "0.7.0"
futures-util = "0.3.28"
base64 = "0.13"
time = { version = "0.3.36", features = [] }
url = "2.4.0"
once_cell = "1.18.0"
futures = "0.3.28"
actix-governor = "0.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-error = "0.2"
color-eyre = "0.6"
dotenv = "0.15.0"